k8s/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec: 
  selector:
    app: payment
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
