k8s/payment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  name: order
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.order.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 9002
